middleware and test
