# cmd/api/middlewares/auth/interface.go
@@ -1,0 +1,7 @@
+package auth
+
+import "github.com/gin-gonic/gin"
+
+type Auth interface {
+	Check() gin.HandlerFunc
+}
